--- a/projects/react-app/package.json
+++ b/projects/react-app/package.json
@@ -1,4 +1,4 @@
-{
+{ "homepage": "http://gitname.github.io/react-gh-pages"
   "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
@@ -16,6 +16,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
