--- a/projects/react-app/package.json
+++ b/projects/react-app/package.json
@@ -1,5 +1,4 @@
-{ "homepage": "http://gitname.github.io/react-gh-pages"
-  "name": "react-complete-guide",
+{ "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,13 +8,14 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "homepage": "http://gitname.github.io/resume/react-app"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
