--- a/projects/react-app/package.json
+++ b/projects/react-app/package.json
@@ -1,6 +1,7 @@
 { "name": "react-complete-guide",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://gitname.github.io/resume/react-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
@@ -8,8 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "homepage": "http://gitname.github.io/resume/react-app"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
