adding files to expenses tracker and renaming

--- a/projects/expensestracker/package.json
+++ b/projects/expensestracker/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://HarrySIV.github.io/resume/projects/expensestracker",
+  "homepage": "https://HarrySIV.github.io/resume/projects/expensestracker",
   "name": "exptra",
   "version": "0.1.0",
   "private": true,
